--- a/index.html
+++ b/index.html
@@ -4,68 +4,266 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>OscaRobber by polakowo</title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-dark.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/respond.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <!--[if lt IE 8]>
-    <link rel="stylesheet" href="stylesheets/ie.css">
-    <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-light.css">
+    <meta name="viewport" content="width=device-width">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
   <body>
-      <div id="header">
-        <nav>
-          <li class="fork"><a href="https://github.com/polakowo/oscarobber">View On GitHub</a></li>
-          <li class="downloads"><a href="https://github.com/polakowo/oscarobber/zipball/master">ZIP</a></li>
-          <li class="downloads"><a href="https://github.com/polakowo/oscarobber/tarball/master">TAR</a></li>
-          <li class="title">DOWNLOADS</li>
-        </nav>
-      </div><!-- end header -->
-
     <div class="wrapper">
+      <header>
+        <h1>OscaRobber</h1>
+        <p>Analysis of data hosted on IMDB </p>
 
+        <p class="view"><a href="https://github.com/polakowo/oscarobber">View the Project on GitHub <small>polakowo/oscarobber</small></a></p>
+
+
+        <ul>
+          <li><a href="https://github.com/polakowo/oscarobber/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/polakowo/oscarobber/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/polakowo/oscarobber">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
       <section>
-        <div id="title">
-          <h1>OscaRobber</h1>
-          <p>Analysis of data hosted on IMDB </p>
-          <hr>
-          <span class="credits left">Project maintained by <a href="https://github.com/polakowo">polakowo</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
-        </div>
+        <h2>
+<a id="goal" class="anchor" href="#goal" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Goal</h2>
 
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<blockquote>
+<p>Explore IMDB dataset and user reviews to look behind the scenes of cinematography.</p>
+</blockquote>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p>This is a synergy project of <em>Computational Tools for Big Data</em> and <em>Social Graphs and Interactions</em>. We aim at combining knowledge from both courses to make a comprehensive analysis on co-stardom network of movies and actors (and draw some beautiful plots). We will use knowledge on network analysis and perform it highly efficiently using big data concepts learned in the Big Data course.</p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<h2>
+<a id="dataset" class="anchor" href="#dataset" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Dataset</h2>
 
 <h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<a id="imdb" class="anchor" href="#imdb" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>IMDB</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>To help serve users who want local access to their data, the IMDB offers their data set as plain text files that can be downloaded for free. The IMDb data comes as plain data files having <code>.list</code> extension. The files have been downloaded from <a href="http://www.imdb.com/interfaces">http://www.imdb.com/interfaces</a> using an FTP client, and include compressed archives created by assembling collections of plain text files of <code>.list</code> format. The fetched data includes 52 archives and 4 folders. The size is estimated by 12.63 GB. The files downloaded have a format that is not easily readable by most computational tools learned in the course, therefore the data preparation played a major role in this project, and required a lot of effort. Since files from ftp://ftp.fu-berlin.de/pub/misc/movies/database/ contain somewhat different numbers of columns and rows, and furthermore include different headers, the files had to be translated into a SQL database using a third-party service <a href="http://imdbpy.sourceforge.net">http://imdbpy.sourceforge.net</a>. But because SQL do not offers infrastructure required to easily access various attributes (and many other downsides, see Explainer Notebook), we have built an infrastructure to transfer the most important data to a NoSQL database. Properties of the resulting database are listed below.</p>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a id="user-reviews" class="anchor" href="#user-reviews" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>User reviews</h3>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<p>For text analysis we used the <em>Large Movie Review Dataset v1.0</em> fetched from <a href="http://ai.stanford.edu/%7Eamaas/data/sentiment/">http://ai.stanford.edu/~amaas/data/sentiment/</a>. The core dataset contains 50,000 labeled, as well as 50,000 unlabeled documents for unsupervised learning. In the entire collection, no more than 30 reviews are allowed for any given movie because reviews for the same movie tend to have correlated ratings. We used unlabeled data, as we are not interested in already provided sentiments, but want to calculate sentiments on ourselves. User reviews are keyed by IMDB ids rather than primary keys in the SQL database, hence we need to map each IMDB id to the corresponding primary key to be able to compare sentiments with other attributes like gross, release year, and more. As there is no information on IMDB ids in the database itself, we parsed OMDB website to find those.</p>
+
+<h3>
+<a id="omdb" class="anchor" href="#omdb" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>OMDB</h3>
+
+<p>The OMDb API is a free web service to obtain movie information. We have obtained 60,000 JSON documents using OMDb API. Each JSON document contains following fields.</p>
+
+<table>
+<thead>
+<tr>
+<th>Website</th>
+<th>Fields</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>IMDB</td>
+<td><em>Year, Rated, Released, Runtime, Genre, Director, Writer, Actors, Plot, Language, Country, Awards, Poster, imdbRating, imdbVotes, imdbID, Type, DVD, BoxOffice, Production, Website</em></td>
+</tr>
+<tr>
+<td>Rotten Tomatoes</td>
+<td><em>tomatoMeter, tomatoReviews, tomatoFresh, tomatoRotten, tomatoConsensus, tomatoUserMeter, tomatoUserRating, tomatoUserReviews, tomatoURL</em></td>
+</tr>
+</tbody>
+</table>
+
+<h3>
+<a id="summary" class="anchor" href="#summary" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Summary</h3>
+
+<p>The final collections stored in MongoDB are listed below.</p>
+
+<table>
+<thead>
+<tr>
+<th>Collections</th>
+<th>Count</th>
+<th>Size (MB)</th>
+<th>Storage (MB)</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td><code>names_map</code></td>
+<td>2851082</td>
+<td>172</td>
+<td>80</td>
+</tr>
+<tr>
+<td><code>prod_countries</code></td>
+<td>951419</td>
+<td>44</td>
+<td>18</td>
+</tr>
+<tr>
+<td><code>release_years</code></td>
+<td>933715</td>
+<td>46</td>
+<td>14</td>
+</tr>
+<tr>
+<td><code>titles_map</code></td>
+<td>933715</td>
+<td>59</td>
+<td>28</td>
+</tr>
+<tr>
+<td><code>genres</code></td>
+<td>886236</td>
+<td>46</td>
+<td>22</td>
+</tr>
+<tr>
+<td><code>directors</code></td>
+<td>853946</td>
+<td>39</td>
+<td>19</td>
+</tr>
+<tr>
+<td><code>languages</code></td>
+<td>848085</td>
+<td>39</td>
+<td>13</td>
+</tr>
+<tr>
+<td><code>cast</code></td>
+<td>725011</td>
+<td>81</td>
+<td>62</td>
+</tr>
+<tr>
+<td><code>prod_companies</code></td>
+<td>634875</td>
+<td>30</td>
+<td>14</td>
+</tr>
+<tr>
+<td><code>runtimes</code></td>
+<td>613963</td>
+<td>30</td>
+<td>14</td>
+</tr>
+<tr>
+<td><code>votes</code></td>
+<td>280444</td>
+<td>12</td>
+<td>6</td>
+</tr>
+<tr>
+<td><code>imdb_ratings</code></td>
+<td>280444</td>
+<td>13</td>
+<td>6</td>
+</tr>
+<tr>
+<td><code>birth_years</code></td>
+<td>278288</td>
+<td>12</td>
+<td>6</td>
+</tr>
+<tr>
+<td><code>keywords</code></td>
+<td>267438</td>
+<td>138</td>
+<td>129</td>
+</tr>
+<tr>
+<td><code>birth_places</code></td>
+<td>250989</td>
+<td>11</td>
+<td>4</td>
+</tr>
+<tr>
+<td><code>prod_companies_map</code></td>
+<td>222116</td>
+<td>14</td>
+<td>7</td>
+</tr>
+<tr>
+<td><code>plots</code></td>
+<td>218348</td>
+<td>148</td>
+<td>109</td>
+</tr>
+<tr>
+<td><code>heights</code></td>
+<td>149667</td>
+<td>7</td>
+<td>2</td>
+</tr>
+<tr>
+<td><code>keywords_map</code></td>
+<td>147421</td>
+<td>9</td>
+<td>5</td>
+</tr>
+<tr>
+<td><code>budgets</code></td>
+<td>101221</td>
+<td>4</td>
+<td>2</td>
+</tr>
+<tr>
+<td><code>omdb_files</code></td>
+<td>64176</td>
+<td>57</td>
+<td>25</td>
+</tr>
+<tr>
+<td><code>gross</code></td>
+<td>15568</td>
+<td>0</td>
+<td>0</td>
+</tr>
+<tr>
+<td><code>user_reviews</code></td>
+<td>7091</td>
+<td>64</td>
+<td>45</td>
+</tr>
+<tr>
+<td><code>birth_places_map</code></td>
+<td>385</td>
+<td>0</td>
+<td>0</td>
+</tr>
+<tr>
+<td><code>languages_map</code></td>
+<td>342</td>
+<td>0</td>
+<td>0</td>
+</tr>
+<tr>
+<td><code>prod_countries_map</code></td>
+<td>241</td>
+<td>0</td>
+<td>0</td>
+</tr>
+<tr>
+<td><code>genres_map</code></td>
+<td>28</td>
+<td>0</td>
+<td>0</td>
+</tr>
+</tbody>
+</table>
+
+<p><em>Hint: Many collections having string values are encoded with integers to save some space, so we introduce collections ending by "_map" to get the initial strings values. Don't be scared if you see something like that, it's actually pretty awesome!</em></p>
+
+<p>Using filtering and intelligent mapping we were able to shrink the total size of IMDB data from 12GB to 1GB. You can download the complete MongoDB database by clicking "Download" button above.</p>
       </section>
-
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/polakowo">polakowo</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+      </footer>
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+    <script src="javascripts/scale.fix.js"></script>
     
   </body>
 </html>
