--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 
 <p>Using filtering and intelligent mapping we were able to shrink the total size of IMDB data from 12GB to 1GB. You can download the complete MongoDB database by clicking "Download" button above.</p>
 
-<p><a href="https://postimg.org/image/4ui8zt4x5/"><img src="https://s12.postimg.org/3s82h9m3x/Screen_Shot_2016_12_05_at_21_04_21.png" alt="Screen Shot 2016-12-05 at 21.04.21.png"></a></p>
+<p><a href="https://postimg.org/image/jy1h9jma5/"><img src="https://s14.postimg.org/6tvwwuu8h/Screen_Shot_2016_12_05_at_21_18_55.png" alt="Screen Shot 2016-12-05 at 21.18.55.png"></a></p>
       </section>
 
     </div>
