Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -268,9 +268,9 @@
 
 <p>Using filtering and intelligent mapping we were able to shrink the total size of IMDB data from 12GB to 1GB. You can download the complete MongoDB database by clicking "Download" button above.</p>
 
-<p><a href="https://postimg.org/image/smkwidl2p/"><img src="https://s16.postimg.org/6nehv648l/Untitled_1.png" alt="Untitled-1.png"></a>
+<p><a href="https://postimg.org/image/5ifirknb9/"><img src="https://s18.postimg.org/5v6wxr5l5/Untitled_1.png" alt="Untitled-1.png"></a>
 actors played in 
-<a href="https://postimg.org/image/8z602w8ev/"><img src="https://s15.postimg.org/xfo5xd95n/Untitled_1.png" alt="Untitled-1.png"></a>
+<a href="https://postimg.org/image/q3243h9pr/"><img src="https://s11.postimg.org/7nhn62vlf/Untitled_1.png" alt="Untitled-1.png"></a>
 movies.</p>
       </section>
 
