Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -274,11 +274,11 @@ actors played in
 movies.</p>
 
 <p>Maximum
-<a href="https://postimg.org/image/msq4t8xvp/"><img src="https://s18.postimg.org/y52qb16kp/Untitled_1.png" alt="Untitled-1.png"></a>
+<a href="https://postimg.org/image/oyxiteoff/"><img src="https://s17.postimg.org/b5964cvu7/Untitled_1.png" alt="Untitled-1.png"></a>
 actors acted in a movie.</p>
 
 <p>An actor played in maximum 
-<a href="https://postimg.org/image/8wcisgivx/"><img src="https://s14.postimg.org/ekitjcn8h/Untitled_1.png" alt="Untitled-1.png"></a>
+<a href="https://postimg.org/image/szskbcxj5/"><img src="https://s16.postimg.org/odwg30c05/Untitled_1.png" alt="Untitled-1.png"></a>
 films.</p>
       </section>
 
