Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
         </div>
 
-        <h2>
-<a id="goal" class="anchor" href="#goal" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Goal</h2>
+        <h3>
+<a id="goal" class="anchor" href="#goal" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Goal</h3>
 
 <blockquote>
 <p>Explore IMDB dataset and user reviews to look behind the scenes of cinematography.</p>
@@ -268,18 +268,38 @@
 
 <p>Using filtering and intelligent mapping we were able to shrink the total size of IMDB data from 12GB to 1GB. You can download the complete MongoDB database by clicking "Download" button above.</p>
 
-<p><a href="https://postimg.org/image/odqp6l41b/"><img src="https://s3.postimg.org/d1e3osvcj/Untitled_1.png" alt="Untitled-1.png"></a>
-actors played in 
-<a href="https://postimg.org/image/q3243h9pr/"><img src="https://s11.postimg.org/7nhn62vlf/Untitled_1.png" alt="Untitled-1.png"></a>
-movies.</p>
+<h2>
+<a id="network-analysis" class="anchor" href="#network-analysis" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Network analysis</h2>
 
-<p>Maximum
-<a href="https://postimg.org/image/oyxiteoff/"><img src="https://s17.postimg.org/b5964cvu7/Untitled_1.png" alt="Untitled-1.png"></a>
-actors acted in a movie.</p>
+<p>The main discoveries in this part of solution refer entirely to the <strong>science fiction</strong> genre. The statistics are based on data provided by IMDB. For details see the particular section in Explainer Notebook.</p>
 
-<p>An actor played in maximum 
-<a href="https://postimg.org/image/szskbcxj5/"><img src="https://s16.postimg.org/odwg30c05/Untitled_1.png" alt="Untitled-1.png"></a>
-films.</p>
+<p>172,650 actors played in 13,989 movies.</p>
+
+<p>Maximum 448 actors acted in a movie.</p>
+
+<p>An actor played in maximum 48 films.</p>
+
+<p>An actor acts in only 1.2 movies on average, and vice versa.</p>
+
+<p>82% of movies and actors are connected, meaning if you get friends with an well-known actor, through a chain of actor-to-actor relationships you may become friends with 82% of all actors on the planet.</p>
+
+<p>Probability that a particular actor plays in a particular movie is 0.0014%.</p>
+
+<p>Probability that an actor plays in two random movies is 0.13%.</p>
+
+<p>Probability that a movie hires two random actors is 0.034%.</p>
+
+<p>An actor knows 59 actors on average.</p>
+
+<p>There is an actor who played with 3,052 actors in total.</p>
+
+<p>A movie is connected through an actor to 18 movies on average.</p>
+
+<p>Two random actors (or movies) are reached in a maximum of 14 steps.</p>
+
+<p>Degrees of co-stardom network follow the power law distribution, meaning the most common number of movies an actor plays is 1, while the most common number of actors a movie hires is 2.</p>
+
+<p>The most actors know fewer actors than those know on average.</p>
       </section>
 
     </div>
