--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
 
 <p>The main discoveries in this part of solution refer entirely to the <strong>science fiction</strong> genre. The statistics are based on data provided by IMDB. For details see the particular section in Explainer Notebook.</p>
 
-<p><span style="color:#00af00; font-size:12px;">172,650</span> actors played in 13,989 movies.</p>
+<p><span style="color:red; font-size:12px;">172,650</span> actors played in 13,989 movies.</p>
 
 <p>Maximum 448 actors acted in a movie.</p>
 
