--- a/index.html
+++ b/index.html
@@ -273,11 +273,11 @@
 
 <p>The main discoveries in this part of solution refer entirely to the <strong>science fiction</strong> genre. The statistics are based on data provided by IMDB. For details see the particular section in Explainer Notebook.</p>
 
-<p><span class="greenNumber">172,650</span> actors played in 13,989 movies.</p>
+<p><span class="greenNumber">172,650</span> actors played in <span class="pinkNumber">13,989</span> movies.</p>
 
-<p>Maximum 448 actors acted in a movie.</p>
+<p>Maximum <span class="greenNumber">448</span> actors acted in a movie.</p>
 
-<p>An actor played in maximum 48 films.</p>
+<p>An actor played in maximum <span class="pinkNumber">48</span> films.</p>
 
 <p>An actor acts in only 1.2 movies on average, and vice versa.</p>
 
