--- a/index.html
+++ b/index.html
@@ -279,25 +279,25 @@
 
 <p>An actor played in maximum <span class="pinkNumber">48</span> films.</p>
 
-<p>An actor acts in only 1.2 movies on average, and vice versa.</p>
+<p>An actor acts in only <span class="pinkNumber">1.2</span> movies on average, and vice versa.</p>
 
-<p>82% of movies and actors are connected, meaning if you get friends with an well-known actor, through a chain of actor-to-actor relationships you may become friends with 82% of all actors on the planet.</p>
+<p><span class="yellowNumber">82%</span> of movies and actors are connected, meaning if you get friends with an well-known actor, through a chain of actor-to-actor relationships you may become friends with 82% of all actors on the planet.</p>
 
-<p>Probability that a particular actor plays in a particular movie is 0.0014%.</p>
+<p>Probability that a particular actor plays in a particular movie is <span class="yellowNumber">0.0014%</span></p>
 
-<p>Probability that an actor plays in two random movies is 0.13%.</p>
+<p>Probability that an actor plays in two random movies is <span class="yellowNumber">0.13%</span></p>
 
-<p>Probability that a movie hires two random actors is 0.034%.</p>
+<p>Probability that a movie hires two random actors is <span class="yellowNumber">0.034%</span></p>
 
-<p>An actor knows 59 actors on average.</p>
+<p>An actor knows <span class="greenNumber">59</span> actors on average.</p>
 
-<p>There is an actor who played with 3,052 actors in total.</p>
+<p>There is an actor who played with <span class="greenNumber">3,052</span> actors in total.</p>
 
-<p>A movie is connected through an actor to 18 movies on average.</p>
+<p>A movie is connected through an actor to <span class="pinkNumber">18</span> movies on average.</p>
 
-<p>Two random actors (or movies) are reached in a maximum of 14 steps.</p>
+<p>Two random actors (or movies) are reached in a maximum of <span class="blueNumber">14</span> steps.</p>
 
-<p>Degrees of co-stardom network follow the power law distribution, meaning the most common number of movies an actor plays is 1, while the most common number of actors a movie hires is 2.</p>
+<p>Degrees of co-stardom network follow the power law distribution, meaning the most common number of movies an actor plays is <span class="blueNumber">1</span>, while the most common number of actors a movie hires is <span class="pinkNumber">2</span></p>
 
 <p>The most actors know fewer actors than those know on average.</p>
       </section>
