--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <h3>
 <a id="omdb" class="anchor" href="#omdb" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>OMDB</h3>
 
-            <p>The OMDb API is a free web service to obtain movie information. We have obtained 60,000 JSON documents using OMDb API. Each JSON document contains following fields.</p>
+            <p>The OMDb API is a free web service to obtain movie information. We have obtained 60,000 JSON documents from <a href="https://www.omdbapi.com">https://www.omdbapi.com</a>. Each JSON document contains following fields.</p>
 
             <table>
                 <thead>
