--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <p>Analysis of data hosted on IMDB </p>
                 <hr>
                 <span class="credits left">Project maintained by <a href="https://github.com/polakowo">polakowo</a></span>
-                <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
+                <span class="credits right">Hosted on GitHub Pages</span>
             </div>
 
             <h3>
