--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
 
             <p>An actor acts in only <span class="pinkNumber">1.2</span> movies on average, and vice versa.</p>
 
-            <p><span class="yellowNumber">82%</span> of movies and actors are connected, meaning if you get friends with an well-known actor, through a chain of actor-to-actor relationships you may become friends with 82% of all actors on the planet.</p>
+            <p><span class="yellowNumber">82%</span> of movies and actors are connected, meaning if you get friends with an well-known actor, through a chain of actor-to-actor relationships you may become friends with <span class="yellowNumber">82%</span> of all actors on the planet.</p>
 
             <p>Probability that a particular actor plays in a particular movie is <span class="yellowNumber">0.0014%</span></p>
 
