--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 
             <p><span class="greenNumber">172,650</span> actors played in <span class="pinkNumber">13,989</span> movies.</p>
 
-            <p>Maximum <span class="greenNumber">448</span> actors acted in a movie.</p>
+            <p>Maximum <span class="greenNumber">448</span> actors acted in a movie (<strong>Angry Video Game Nerd: The Movie</strong>).</p>
 
             <p>An actor played in maximum <span class="pinkNumber">48</span> films.</p>
 
