--- a/index.html
+++ b/index.html
@@ -287,9 +287,9 @@
 
             <p><span class="greenNumber">172,650</span> actors played in <span class="pinkNumber">13,989</span> movies.</p>
 
-            <p>Maximum <span class="greenNumber">448</span> actors acted in a movie <strong>Angry Video Game Nerd: The Movie</strong></p>
+            <p>The biggest cast has movie <strong>Angry Video Game Nerd: The Movie</strong> with <span class="greenNumber">448</span> actors.</p>
 
-            <p>An actor played in maximum <span class="pinkNumber">48</span> films.</p>
+            <p>Actor <strong>Kōichi Yamadera</strong> played in <span class="pinkNumber">48</span> science fiction films.</p>
 
             <p>An actor acts in only <span class="pinkNumber">1.2</span> movies on average, and vice versa.</p>
 
