--- a/index.html
+++ b/index.html
@@ -280,8 +280,7 @@
 
             <p>Using filtering and intelligent mapping we were able to shrink the total size of IMDB data from 12GB to 1GB. You can download the complete MongoDB database by clicking "Download" button above.</p>
 
-            <h2>
-<a id="network-analysis" class="anchor" href="#network-analysis" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Network analysis</h2>
+            <h2><a id="network-analysis" class="anchor" href="#network-analysis" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Network analysis</h2>
 
             <p>The main discoveries in this part of solution refer entirely to the <strong>science fiction</strong> genre. The statistics are based on data provided by IMDB. For details see the particular section in Explainer Notebook.</p>
 
@@ -290,6 +289,8 @@
             <p>The biggest cast has movie <strong>Angry Video Game Nerd: The Movie</strong> with <span class="greenNumber">448</span> actors.</p>
 
             <p>Actor <strong>Kōichi Yamadera</strong> played in <span class="pinkNumber">48</span> science fiction films.</p>
+            
+            <img src="Yamadera.png" alt="Kōichi Yamadera">
 
             <p>An actor acts in only <span class="pinkNumber">1.2</span> movies on average, and vice versa.</p>
 
