--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 
             <p>Actor <strong>Kōichi Yamadera</strong> played in <span class="pinkNumber">48</span> science fiction films.</p>
             
-            <img src="Yamadera.png" alt="Kōichi Yamadera">
+            <img src="images/Yamadera.png" alt="Kōichi Yamadera">
 
             <p>An actor acts in only <span class="pinkNumber">1.2</span> movies on average, and vice versa.</p>
 
