--- a/index.html
+++ b/index.html
@@ -288,6 +288,8 @@
 
             <p>The biggest cast has movie <strong>Angry Video Game Nerd: The Movie</strong> with <span class="greenNumber">448</span> actors.</p>
 
+            <img src="images/AVGN_Full.jpg" alt="Angry Video Game Nerd: The Movie">
+            
             <p>Actor <strong>Kōichi Yamadera</strong> played in <span class="pinkNumber">48</span> science fiction films.</p>
             
             <img src="images/Yamadera.png" alt="Kōichi Yamadera">
