--- a/index.html
+++ b/index.html
@@ -288,11 +288,11 @@
 
             <p>The biggest cast has movie <strong>Angry Video Game Nerd: The Movie</strong> with <span class="greenNumber">448</span> actors.</p>
 
-            <img src="images/AVGN_Full.jpg" alt="Angry Video Game Nerd: The Movie">
+            <img src="/images/AVGN_Full.jpg" alt="Angry Video Game Nerd: The Movie">
             
             <p>Actor <strong>Kōichi Yamadera</strong> played in <span class="pinkNumber">48</span> science fiction films.</p>
             
-            <img src="images/Yamadera.png" alt="Kōichi Yamadera">
+            <img src="/images/Yamadera.png" alt="Kōichi Yamadera">
 
             <p>An actor acts in only <span class="pinkNumber">1.2</span> movies on average, and vice versa.</p>
 
