--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 
             <p><span class="greenNumber">172,650</span> actors played in <span class="pinkNumber">13,989</span> movies.</p>
 
-            <p>The biggest cast has movie <strong>Angry Video Game Nerd: The Movie</strong> with <span class="greenNumber">448</span> actors.</p>
+            <p>The biggest cast has movie <strong>Angry Video Game Nerd: The Movie</strong> with <span class="greenNumber">448</span> actors. Here, IMDB lists all the normally uncredited extras in the cast.</p>
 
             <img src="/images/AVGN_Full.jpg" alt="Angry Video Game Nerd: The Movie">
             
