--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
 
             <p>An actor knows <span class="greenNumber">59</span> actors on average.</p>
 
-            <p><strong>Stan Lee (1922)</strong> played with <span class="greenNumber">3,052</span> actors in total.</p>
+            <p><strong>Stan Lee (1922)</strong> knows <span class="greenNumber">3,052</span> actors in total.</p>
             
             <img src="images/stanlee.jpg" alt="Stan Lee (1922)">
 
