--- a/index.html
+++ b/index.html
@@ -113,165 +113,165 @@
                 <tbody>
                     <tr>
                         <td><code>names_map</code></td>
-                        <td>2851082</td>
-                        <td>172</td>
-                        <td>80</td>
+                        <td align="right">2851082</td>
+                        <td align="right">172</td>
+                        <td align="right">80</td>
                     </tr>
                     <tr>
                         <td><code>prod_countries</code></td>
-                        <td>951419</td>
-                        <td>44</td>
-                        <td>18</td>
+                        <td align="right">951419</td>
+                        <td align="right">44</td>
+                        <td align="right">18</td>
                     </tr>
                     <tr>
                         <td><code>release_years</code></td>
-                        <td>933715</td>
-                        <td>46</td>
-                        <td>14</td>
+                        <td align="right">933715</td>
+                        <td align="right">46</td>
+                        <td align="right">14</td>
                     </tr>
                     <tr>
                         <td><code>titles_map</code></td>
-                        <td>933715</td>
-                        <td>59</td>
-                        <td>28</td>
+                        <td align="right">933715</td>
+                        <td align="right">59</td>
+                        <td align="right">28</td>
                     </tr>
                     <tr>
                         <td><code>genres</code></td>
-                        <td>886236</td>
-                        <td>46</td>
-                        <td>22</td>
+                        <td align="right">886236</td>
+                        <td align="right">46</td>
+                        <td align="right">22</td>
                     </tr>
                     <tr>
                         <td><code>directors</code></td>
-                        <td>853946</td>
-                        <td>39</td>
-                        <td>19</td>
+                        <td align="right">853946</td>
+                        <td align="right">39</td>
+                        <td align="right">19</td>
                     </tr>
                     <tr>
                         <td><code>languages</code></td>
-                        <td>848085</td>
-                        <td>39</td>
-                        <td>13</td>
+                        <td align="right">848085</td>
+                        <td align="right">39</td>
+                        <td align="right">13</td>
                     </tr>
                     <tr>
                         <td><code>cast</code></td>
-                        <td>725011</td>
-                        <td>81</td>
-                        <td>62</td>
+                        <td align="right">725011</td>
+                        <td align="right">81</td>
+                        <td align="right">62</td>
                     </tr>
                     <tr>
                         <td><code>prod_companies</code></td>
-                        <td>634875</td>
-                        <td>30</td>
-                        <td>14</td>
+                        <td align="right">634875</td>
+                        <td align="right">30</td>
+                        <td align="right">14</td>
                     </tr>
                     <tr>
                         <td><code>runtimes</code></td>
-                        <td>613963</td>
-                        <td>30</td>
-                        <td>14</td>
+                        <td align="right">613963</td>
+                        <td align="right">30</td>
+                        <td align="right">14</td>
                     </tr>
                     <tr>
                         <td><code>votes</code></td>
-                        <td>280444</td>
-                        <td>12</td>
-                        <td>6</td>
+                        <td align="right">280444</td>
+                        <td align="right">12</td>
+                        <td align="right">6</td>
                     </tr>
                     <tr>
                         <td><code>imdb_ratings</code></td>
-                        <td>280444</td>
-                        <td>13</td>
-                        <td>6</td>
+                        <td align="right">280444</td>
+                        <td align="right">13</td>
+                        <td align="right">6</td>
                     </tr>
                     <tr>
                         <td><code>birth_years</code></td>
-                        <td>278288</td>
-                        <td>12</td>
-                        <td>6</td>
+                        <td align="right">278288</td>
+                        <td align="right">12</td>
+                        <td align="right">6</td>
                     </tr>
                     <tr>
                         <td><code>keywords</code></td>
-                        <td>267438</td>
-                        <td>138</td>
-                        <td>129</td>
+                        <td align="right">267438</td>
+                        <td align="right">138</td>
+                        <td align="right">129</td>
                     </tr>
                     <tr>
                         <td><code>birth_places</code></td>
-                        <td>250989</td>
-                        <td>11</td>
-                        <td>4</td>
+                        <td align="right">250989</td>
+                        <td align="right">11</td>
+                        <td align="right">4</td>
                     </tr>
                     <tr>
                         <td><code>prod_companies_map</code></td>
-                        <td>222116</td>
-                        <td>14</td>
-                        <td>7</td>
+                        <td align="right">222116</td>
+                        <td align="right">14</td>
+                        <td align="right">7</td>
                     </tr>
                     <tr>
                         <td><code>plots</code></td>
-                        <td>218348</td>
-                        <td>148</td>
-                        <td>109</td>
+                        <td align="right">218348</td>
+                        <td align="right">148</td>
+                        <td align="right">109</td>
                     </tr>
                     <tr>
                         <td><code>heights</code></td>
-                        <td>149667</td>
-                        <td>7</td>
-                        <td>2</td>
+                        <td align="right">149667</td>
+                        <td align="right">7</td>
+                        <td align="right">2</td>
                     </tr>
                     <tr>
                         <td><code>keywords_map</code></td>
-                        <td>147421</td>
-                        <td>9</td>
-                        <td>5</td>
+                        <td align="right">147421</td>
+                        <td align="right">9</td>
+                        <td align="right">5</td>
                     </tr>
                     <tr>
                         <td><code>budgets</code></td>
-                        <td>101221</td>
-                        <td>4</td>
-                        <td>2</td>
+                        <td align="right">101221</td>
+                        <td align="right">4</td>
+                        <td align="right">2</td>
                     </tr>
                     <tr>
                         <td><code>omdb_files</code></td>
-                        <td>64176</td>
-                        <td>57</td>
-                        <td>25</td>
+                        <td align="right">64176</td>
+                        <td align="right">57</td>
+                        <td align="right">25</td>
                     </tr>
                     <tr>
                         <td><code>gross</code></td>
-                        <td>15568</td>
-                        <td>0</td>
-                        <td>0</td>
+                        <td align="right">15568</td>
+                        <td align="right">0</td>
+                        <td align="right">0</td>
                     </tr>
                     <tr>
                         <td><code>user_reviews</code></td>
-                        <td>7091</td>
-                        <td>64</td>
-                        <td>45</td>
+                        <td align="right">7091</td>
+                        <td align="right">64</td>
+                        <td align="right">45</td>
                     </tr>
                     <tr>
                         <td><code>birth_places_map</code></td>
-                        <td>385</td>
-                        <td>0</td>
-                        <td>0</td>
+                        <td align="right">385</td>
+                        <td align="right">0</td>
+                        <td align="right">0</td>
                     </tr>
                     <tr>
                         <td><code>languages_map</code></td>
-                        <td>342</td>
-                        <td>0</td>
-                        <td>0</td>
+                        <td align="right">342</td>
+                        <td align="right">0</td>
+                        <td align="right">0</td>
                     </tr>
                     <tr>
                         <td><code>prod_countries_map</code></td>
-                        <td>241</td>
-                        <td>0</td>
-                        <td>0</td>
+                        <td align="right">241</td>
+                        <td align="right">0</td>
+                        <td align="right">0</td>
                     </tr>
                     <tr>
                         <td><code>genres_map</code></td>
-                        <td>28</td>
-                        <td>0</td>
-                        <td>0</td>
+                        <td align="right">28</td>
+                        <td align="right">0</td>
+                        <td align="right">0</td>
                     </tr>
                 </tbody>
             </table>
