--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
 
             <p>Two random actors (or movies) are reached in a maximum of <span class="blueNumber">14</span> steps.</p>
 
-            <p>Degrees of co-stardom network follow the power law distribution, meaning the most common number of movies an actor plays is <span class="blueNumber">1</span>, while the most common number of actors a movie hires is <span class="pinkNumber">2</span></p>
+            <p>Degrees of co-stardom network follow the power law distribution, meaning the most common number of movies an actor plays is <span class="pinkNumber">1</span>, while the most common number of actors a movie hires is <span class="greenNumber">2</span></p>
             
             <div>
                 <a href="https://plot.ly/~polakowo/1/" target="_blank" title="" style="display: block; text-align: center;"><img src="https://plot.ly/~polakowo/1.png" alt="" style="max-width: 100%;width: 600px;max-height: 300px;height: 300px"  width="600px" height="300px" onerror="this.onerror=null;this.src='https://plot.ly/404.png';" /></a>
