--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                 <script data-plotly="polakowo:1"  src="https://plot.ly/embed.js" async></script>
             </div>
 
-            <p>The most actors know fewer actors than those know on average.</p>
+            <p>Friendship paradox is true: the most actors know fewer actors than those know on average.</p>
         </section>
 
     </div>
