--- a/index.html
+++ b/index.html
@@ -305,11 +305,11 @@
             <p>Friendship paradox is true: the most actors know fewer actors than those know on average.</p>
             
             <h3>Centrality</h3>
-            <p>&ndash; If you want to get friends with the most actors on Earth, first become friends with the cast of <strong>Iron Man Three (2013)</strong>, as it is the most central hub in the co-stardom network.</p>
+            <p>&mdash; If you want to get friends with the most actors on Earth, first become friends with the cast of <strong>Iron Man Three (2013)</strong>, as it is the most central hub in the co-stardom network.</p>
             <img src="images/ironman3.jpg" alt="Iron Man Three (2013)">
-            <p>&ndash; Actors who played in <strong>Kaze no tani no Naushika (1984)</strong> played also in <span class="pinkNumber">343</span> different movies, which is a record.</p>
+            <p>&mdash; Actors who played in <strong>Kaze no tani no Naushika (1984)</strong> played also in <span class="pinkNumber">343</span> different movies, which is a record.</p>
             <img src="images/kaze.jpg" alt="Kaze no tani no Naushika (1984)">
-            <p>&ndash; Actors who played in <strong>Kidô senshi Gandamu (1981)</strong> played also in very connected movies like <strong>Kaze no tani no Naushika (1984)</strong></p>
+            <p>&mdash; Actors who played in <strong>Kidô senshi Gandamu (1981)</strong> played also in very connected movies like <strong>Kaze no tani no Naushika (1984)</strong></p>
             <img src="images/gundam.jpg" alt="Kidô senshi Gandamu (1981)">
         </section>
 
