--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
             <p>The main discoveries in this part of solution refer entirely to the <strong>science fiction</strong> genre. The statistics are based on data provided by IMDB. For details see the particular section in Explainer Notebook.</p>
             <p><span class="greenNumber">172,650</span> actors played in <span class="pinkNumber">13,989</span> movies.</p>
             <p>The biggest cast has movie <strong>Angry Video Game Nerd: The Movie (2014)</strong> with <span class="greenNumber">448</span> actors. Here, IMDB lists all the normally uncredited extras in the cast.</p>
-            <img src="images/AVGN_Full.jpg" alt="Angry Video Game Nerd: The Movie (2014)">
+            <img src="images/angry.jpg" alt="Angry Video Game Nerd: The Movie (2014)">
             <p>Actor <strong>Kōichi Yamadera (1961)</strong> played in <span class="pinkNumber">48</span> science fiction films.</p>
             <img src="images/Yamadera.png" alt="Kōichi Yamadera (1961)">
             <p>An actor acts in only <span class="pinkNumber">1.2</span> movies on average, and vice versa.</p>
