--- a/index.html
+++ b/index.html
@@ -311,6 +311,14 @@
             <img src="images/kaze.jpg" alt="Kaze no tani no Naushika (1984)">
             <p>Actors who played in <strong>Kidô senshi Gandamu (1981)</strong> played also in very connected movies like <strong>Kaze no tani no Naushika (1984)</strong></p>
             <img src="images/gundam.jpg" alt="Kidô senshi Gandamu (1981)">
+            
+            <h3>Attributes</h3>
+            <p>The science fiction genre has experienced the main gain in popularity in the beginning of <span class="Number">2000th</span>, when the technology for movie production evolutionized, and it goes through the peak right now.</p>
+            <p>The most common runtimes are around <span class="Number">10-30</span> min and <span class="Number">80-120</span> min.</p>
+            <p>The most numbers of votes are low. But some movies have millions of them.</p>
+            <p>The most movies are low-budget movies. The more budget the movie has, the more money it spends on cast and crew, and the more profitable actors it hires, which also play in many other pictures.</p>
+            <p>The most actors of sci-fi films were born from <span class="Number">1950</span> to <span class="Number">1980</span>. Actors who were born in later years are younger and therefore less wanted as more experienced actors. We also see a trend that the science fiction becomes more and more popular and many new actors join this trend.</p>
+            <p>Height attribute, in contrast, follows the normal (Gaussian) distribution, and isn't correlated with any other attribute.</p>
         </section>
 
     </div>
